--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,22 @@ Micro processor codes/noname.com.debug
 *.pptx
 os prsntsn-Neptune/nila.ppt
 *.ppt
+*.sdf
+*.pdf
+*.pdb
+*.ipch
+*.tlog
+*.html
+URI PROBS/doc/package-list
+*.css
+*.js
+*.png
+wallpaper/12962-anonymous-1920x1200-digital-art-wallpaper.jpg
+*.jpg
+*.layout
+Test_temp.cpp
+*.cbp
+quadtrp8.gif
+*.class
+URI PROBS/test.cpp
+*.txt
